--- a/ECUAGOL.html
+++ b/ECUAGOL.html
@@ -9,9 +9,25 @@
 
 </head>
 
-<body bgcolor="#44444A" text="#00ffff">
+<body bgcolor="#44444A" text="White">
 
 <h1>PAGINA ECUAGOL</h1>
-
+<div class="pagina">
+						<div class="PublicidadLateralizquierda" style="width:120px; height:600px;display:block; ">
+					<div id="izqAb" class="unionsc" style="position:absolute;z-index: 9">
+						<!-- /105274759/Skycrapper-Izq-Unionlayer -->
+						<div id='div-gpt-ad-1522349456234-0' style='height:600px; width:120px;'>
+						<script>
+						googletag.cmd.push(function() { googletag.display('div-gpt-ad-1522349456234-0'); });
+						</script>
+						</div>
+					</div>
+					<!-- /105274759/Ecuagol-SkyCrapper-Izq -->
+					<!--div id='div-gpt-ad-1522345366740-0' style='height:600px; width:120px;'>
+						<script>
+						googletag.cmd.push(function() { googletag.display('div-gpt-ad-1522345366740-0'); });
+						</script>
+					</div-->
+				</div>
 </body>
 </html>
